operator/pkg/model/ingestion/testdata/gateway/tls_weighted_backends/input-service.yaml
- metadata:
    creationTimestamp: null
    name: backend-v1
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
- metadata:
    creationTimestamp: null
    name: backend-v2
    namespace: default
  spec: {}
  status:
    loadBalancer: {}
