operator/pkg/model/ingestion/testdata/gateway/tls_weighted_backends/output-listeners.yaml
- hostname: '*'
  mode: Passthrough
  name: tls
  port: 443
  routes:
  - backends:
    - name: backend-v1
      namespace: default
      port:
        port: 443
      weight: 70
    - name: backend-v2
      namespace: default
      port:
        port: 443
      weight: 30
    hostnames:
    - test.example.com
  sources:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: my-gateway
    namespace: default
    version: v1
